--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,11 @@
+body{
+    background: #e6d48d;
+}
 .container{
     margin: 0 auto;
     width: 960px;
+}
+#code{
+    width: 100%;
+    height: 128px
 }
