--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,89 +1,39 @@
-body{
-    background: #e6d48d;
-    font-family: Helvetica, Arial, Sans-Serif;
+html{
+  background: #e6d48d;
+  font-family: Helvetica, Arial, Sans-Serif !important;
 }
-.container{
-    margin: 0 auto;
-    width: 960px;
+
+.character-image {
+  height: 150px;
 }
-#code{
-    color: wheat;
-    background: #4d462b;
-    width: 90%;
-    height: 128px;
-    padding: 10px;
-    margin: 0 auto;
-    display: block;
-    border: 1px solid #dfd2a4;
+
+a:hover {
+  text-decoration: none;
 }
-.btn{
-    margin: 10px auto;
-    display: block;
-    padding: 14px;
-    width: 220px;
-    background: white;
-    border: none;
-}
-.help{
-    text-align: center;
-}
-#console-log-div{
-    font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace;
-    display: flex;
-    flex-direction: column-reverse;
-    height: 220px;
-    overflow-y: scroll;
-    padding: 5px 10px;
-    color: white;
-    background: black;
-}
-.skin {
-    width: 30%;
-    padding: 1%;
-    margin: 1%;
-    text-align: center;
-}
-.skin img{
-    height: 96px;
-}
-.level a{
-    color: #1b1b1b;
-    text-decoration: none;
-}
-.level img {
-    width: 948px;
-}
-.level, .skin {
-    background: #dfd2a4;
-    padding: 5px;
-    border: 1px solid rgba(255,255,255,0.3);
-    margin-bottom: 10px;
-    cursor: pointer;
+
+.level, .skin, .modal {
+  background: #dfd2a4;
+  border: 1px solid rgba(255,255,255,0.3);
+  cursor: pointer;
 }
 .level:hover, .skin:hover, .active {
-    background: #ecdeae;
+  background: #ecdeae !important;
 }
-.pull-left {
-    float:left;
-}
-.pull-right {
-    float:right;
-}
-.description{
-    padding:10px
-}
-.description h2{
-    margin-top:0px;
-}
-#myProgress {
-    width: 960px;
-    position: fixed;
-    left: auto;
-    right: auto;
 
- }
-#myBar {
-    width: 1%;
-    height: 30px;
-    background-color: #4d462b;
+button {
+  border: 0.5px solid rgb(145, 145, 145) !important;
+}
+
+#code{
+  color: wheat;
+  background: #4d462b;
+  border: 1px solid #dfd2a4;
+  font-size: 15px;
+}
+
+#console-log-div{
+  font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace;
+  overflow-y: scroll;
+  color: white;
+  background: black;
 }
